figured out bibliography

--- a/document/book.bib
+++ b/document/book.bib
@@ -1,10 +1,34 @@
-@Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {http://yihui.name/knitr/},
+
+@article{margulisModelMelodicExpectation2005,
+  title = {A {{Model}} of {{Melodic Expectation}}},
+  volume = {22},
+  issn = {07307829, 15338312},
+  doi = {10.1525/mp.2005.22.4.663},
+  language = {en},
+  number = {4},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Margulis, Elizabeth Hellmuth},
+  month = jun,
+  year = {2005},
+  pages = {663-714},
+  file = {/Users/davidjohnbaker/Zotero/storage/9AI3KLIQ/Margulis - 2005 - A Model of Melodic Expectation.pdf}
 }
+
+@article{nicholsScoreOneJazz2018,
+  title = {Score One for Jazz: {{Working}} Memory in Jazz and Classical Musicians.},
+  volume = {28},
+  issn = {2162-1535, 0275-3987},
+  shorttitle = {Score One for Jazz},
+  doi = {10.1037/pmu0000211},
+  abstract = {Jazz musicians rely on different skills than do classical musicians for successful performances. We investigated the working memory span of classical and jazz student musicians on musical and nonmusical working memory tasks. College-aged musicians completed the Bucknell Auditory Imagery Scale, followed by verbal working memory tests and musical working memory tests that included visual and auditory presentation modes and written or played recall. Participants were asked to recall the last word (or pitch) from each task after a distraction task, by writing, speaking, or playing the pitch on the piano. Jazz musicians recalled more pitches that were presented in auditory versions and recalled on the piano compared with classical musicians. Scores were positively correlated to years of jazz-playing experience. We conclude that type of training should be considered in studies of musical expertise, and that tests of musicians' cognitive skills should include domain-specific components.},
+  language = {en},
+  number = {2},
+  journal = {Psychomusicology: Music, Mind, and Brain},
+  author = {Nichols, Bryan E. and W\"ollner, Clemens and Halpern, Andrea R.},
+  month = jun,
+  year = {2018},
+  pages = {101-107},
+  file = {/Users/davidjohnbaker/Zotero/storage/LBZ5D7KG/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf}
+}
+
+
