--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -16,6 +16,8 @@ description: "This dissertation explores both individual and musical features th
 
 This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
 
+My first reference [@margulisModelMelodicExpectation2005]
+
 The **bookdown** package can be installed from CRAN or Github:
 
 ```{r eval=FALSE}
