--- a/document/book.bib
+++ b/document/book.bib
@@ -31,4 +31,13 @@
   file = {/Users/davidjohnbaker/Zotero/storage/LBZ5D7KG/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf}
 }
 
+@techreport{NASM201718HandbookPdf2018,
+  address = {Reston, Virginia},
+  title = {{{NASM}}-2017-18-{{Handbook}}.Pdf},
+  institution = {{National Association of Schools of Music}},
+  month = jun,
+  year = {2018},
+  file = {/Users/davidjohnbaker/Zotero/storage/GU9532NS/NASM-2017-18-Handbook.pdf}
+}
+
 
