--- a/document/book.bib
+++ b/document/book.bib
@@ -28,7 +28,12 @@
   month = jun,
   year = {2018},
   pages = {101-107},
-  file = {/Users/davidjohnbaker/Zotero/storage/LBZ5D7KG/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf}
+  file = {/Users/davidjohnbaker/Zotero/storage/LBZ5D7KG/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf},
+  annote = {Notes
+
+Bascially people need to take into account WHAT kind of training people are getting.
+
+This article supports view that things should be looked at in terms of polymorphism.}
 }
 
 @techreport{NASM201718HandbookPdf2018,
@@ -38,6 +43,136 @@
   month = jun,
   year = {2018},
   file = {/Users/davidjohnbaker/Zotero/storage/GU9532NS/NASM-2017-18-Handbook.pdf}
+}
+
+@book{schumann1860musikalische,
+  title = {Musikalische {{Haus}}-Und {{Lebens}}-{{Regeln}}},
+  publisher = {{J. Schuberth \& Comp.}},
+  author = {Schumann, Robert and Klauser, Karl},
+  year = {1860}
+}
+
+@article{smith1934solfege,
+  title = {Solf\`ege: {{An}} Essential in Musicianship},
+  volume = {20},
+  number = {5},
+  journal = {Music Supervisors' Journal},
+  author = {Smith, Melville},
+  year = {1934},
+  pages = {16-20},
+  publisher = {{SAGE Publications Sage CA: Los Angeles, CA}},
+  annote = {Cited on page 3 of Karpinski
+
+"the musician must learn to 'hear with the eye, and see with the ear;" p.58
+
+~
+
+~}
+}
+
+@article{longRelationshipsPitchMemory1977,
+  title = {Relationships {{Between Pitch Memory}} in {{Short Melodies}} and {{Selected Factors}}},
+  volume = {25},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.2307/3345268},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Long, Peggy A.},
+  month = dec,
+  year = {1977},
+  pages = {272-282},
+  file = {/Users/davidjohnbaker/Zotero/storage/NFMPA9DU/Long - 1977 - Relationships Between Pitch Memory in Short Melodi.pdf},
+  annote = {Notes on Long 1997
+
+length, tonal structure, contour, individual all contribute.
+
+Previous Structure and Tonalness are good predictors!
+
+In experiment had musical background as a predictor, but they elimnated people who were bad at singing
+
+~}
+}
+
+@article{taylorStrategiesMemoryShort1983,
+  title = {Strategies in Memory for Short Melodies: {{An}} Extension of {{Otto Ortmann}}'s 1933 Study.},
+  volume = {3},
+  issn = {2162-1535, 0275-3987},
+  shorttitle = {Strategies in Memory for Short Melodies},
+  doi = {10.1037/h0094258},
+  language = {en},
+  number = {1},
+  journal = {Psychomusicology: A Journal of Research in Music Cognition},
+  author = {Taylor, Jack A. and Pembrook, Randall G.},
+  year = {1983},
+  pages = {16-35},
+  file = {/Users/davidjohnbaker/Zotero/storage/K2YYI4M3/Taylor and Pembrook - 1983 - Strategies in memory for short melodies An extens.pdf},
+  annote = {Notes on Taylor and Pembrook 1983
+
+Musical characteristics and features predict melodic memory scores.
+
+* Insights from Ortmann 1933????
+
+In addition to Ortmann variables
+
+- Musical Traning
+
+- Serial Position and Length
+
+- Music Context
+
+- Tonality
+
+-Transposition
+
+-Expectancy
+
+-Octave Displacement
+
+-Melodic Contour
+
+~
+
+====
+
+Study also suggests how to score simple melodies
+
+did not use age as covariate with big age span
+
+~}
+}
+
+@article{tallaricoStudyThreePhase1974,
+  title = {A {{Study}} of the {{Three Phase Concept}} of {{Memory}}: {{Its Musical Implications}}},
+  language = {en},
+  author = {Tallarico, P. Thomas},
+  year = {1974},
+  pages = {1-15},
+  file = {/Users/davidjohnbaker/Zotero/storage/2PNXUTZY/A Study of the Three Phase Concept of Memory Its .pdf},
+  annote = {Long discussion on STM and LTM but from ages ago}
+}
+
+@article{ouraConstructingRepresentationMelody1991a,
+  title = {Constructing a {{Representation}} of a {{Melody}}: {{Transforming Melodic Segments}} into {{Reduced Pitch Patterns Operated}} on by {{Modifiers}}},
+  volume = {9},
+  issn = {07307829, 15338312},
+  shorttitle = {Constructing a {{Representation}} of a {{Melody}}},
+  doi = {10.2307/40285531},
+  language = {en},
+  number = {2},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Oura, Yoko},
+  month = dec,
+  year = {1991},
+  pages = {251-265},
+  file = {/Users/davidjohnbaker/Zotero/storage/DFZ5EQPM/Oura - 1991 - Constructing a Representation of a Melody Transfo.pdf},
+  annote = {Notes Oura 1991
+
+Small study with no statisical analysis
+
+Interesting methdology, but they bascially say that the retention model is better with very shady analysis~
+
+[ ] Incorporated}
 }
 
 
